Fix overflow wrapping on mobile

--- a/_sass/abysm/layout.scss
+++ b/_sass/abysm/layout.scss
@@ -121,6 +121,7 @@ article .categories{
 
 article .content, .page.content {
     overflow-wrap: anywhere;
+    word-wrap: break-word;
     a {
         text-decoration: none;
         color: $link;
